--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     git:
       url: git@github.com:georgelesica-wf/bender.dart.git
       ref: master
+  path_provider: ^0.4.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.7.0
