MSODP-1090 fix async problems

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
       url: git@github.com:georgelesica-wf/bender.dart.git
       ref: master
   path_provider: ^0.4.1
-
+  github: ^4.0.0
+  
 dev_dependencies:
   flutter_launcher_icons: ^0.7.0
   flutter_test:
