--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
+  meta: ^1.0.0
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
@@ -19,8 +20,11 @@ dependencies:
       ref: master
   path_provider: ^0.4.1
   github: ^4.0.0
+  json_annotation: ^2.0.0
   
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
   flutter_launcher_icons: ^0.7.0
   flutter_test:
     sdk: flutter
